force-app/main/default/objects/Pilar360__c/Pilar360__c.object-meta.xml
<CustomObject>
    <label>Pilar360</label>
    <nameField>
        <displayFormat>P360-{00000000}</displayFormat>
        <label>Pilar360</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilar360s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>