force-app/main/default/objects/Pilar360__c/fields/Administrative_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_1__c</fullName>
    <label>Administrative_Level_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>