force-app/main/default/objects/Pilar360__c/fields/Administrative_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_3__c</fullName>
    <label>Administrative_Level_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>