force-app/main/default/objects/Pilar360__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup con CONTACTS</description>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pilar360s</relationshipLabel>
    <relationshipName>Pilar360s</relationshipName>
    <type>Lookup</type>
</CustomField>