force-app/main/default/objects/Pilar360__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <externalId>true</externalId>
    <label>guid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>