force-app/main/default/objects/Pilar360__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Mobile_Phone</label>
    <type>Phone</type>
</CustomField>