force-app/main/default/objects/Pilar360__c/fields/pilar_360_Ciudadano360__c.field-meta.xml
<CustomField>
    <fullName>pilar_360_Ciudadano360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilar360 Ciudadano360</label>
    <type>Checkbox</type>
</CustomField>