force-app/main/default/objects/Pilar360__c/fields/pilar_360_date__c.field-meta.xml
<CustomField>
    <fullName>pilar_360_date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Pilar360 Fecha</label>
    <type>DateTime</type>
</CustomField>