force-app/main/default/objects/Pilar360__c/fields/Programa_Mi_Salud__c.field-meta.xml
<CustomField>
    <fullName>Programa_Mi_Salud__c</fullName>
    <label>Programa Mi Salud</label>
    <summaryFilterItems>
        <field>PilarCitizenInteractions__c.Programs__c</field>
        <operation>equals</operation>
        <value>MiSalud</value>
    </summaryFilterItems>
    <summaryForeignKey>PilarCitizenInteractions__c.Pilar360Citizen_SFID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>