force-app/main/default/objects/Pilar360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Administrative_Level_1__c</columns>
    <columns>Administrative_Level_2__c</columns>
    <columns>Administrative_Level_3__c</columns>
    <columns>Administrative_Level_4__c</columns>
    <columns>Edad__c</columns>
    <columns>Email__c</columns>
    <columns>FirstName__c</columns>
    <columns>FullName__c</columns>
    <columns>guid__c</columns>
    <columns>LastName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>